--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <!-- Website Navigation -->
     <nav>
         <ul>
             <li>
@@ -25,6 +26,11 @@
             </li>
         </ul>
     </nav>
-    
+    <!-- Website Slider -->
+    <section id="home" class="slider">
+        <div class="slider-overlay">
+            <h1>Welcome to Our Business</h1>
+        </div>
+    </section>
 </body>
 </html>
