--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <section id="home" class="slider">
         <div class="slider-overlay">
             <h1>Welcome to Our Business</h1>
+            <p>Premium Research Help Topics</p>
         </div>
     </section>
 </body>
