--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <a href="#features">Features</a>
             </li>
             <li>
+                <a href="#about">About us</a>
+            </li>
+            <li>
                 <a href="#services">Sercives</a>
             </li>
             <li>
