add to index page

--- a/index.html
+++ b/index.html
@@ -36,5 +36,17 @@
             <p>Premium Research Help Topics</p>
         </div>
     </section>
+    <section >
+        <h2>Researches</h2>
+    </section>
+<section  id="axe" class="find">
+    <di class="find-overlay">
+        <h1>Discover something new</h1>
+        <p>Learn something new</p>
+    </div>
+</section>
+
+
+
 </body>
 </html>
